# qt5-sqlcipher

./: CMakeLists.txt  README.md
qt-private/: qsql_sqlite.cpp  qsql_sqlite_p.h
test-shared/: CMakeLists.txt  main.cpp
